[gd_scene load_steps=10 format=3 uid="uid://722qm4gw7mgt"]

[ext_resource type="AudioStream" uid="uid://cugs7a4de2unb" path="res://assets/sound_effects/sfx_click_button.ogg" id="1_kfu8w"]
[ext_resource type="Script" path="res://scenes/autoload/sfx_controller.gd" id="1_tmdo1"]
[ext_resource type="AudioStream" uid="uid://b2m1k3yggkyxx" path="res://assets/sound_effects/sfx_scale_up.ogg" id="2_n3rym"]
[ext_resource type="AudioStream" uid="uid://cky0gt33w3jg4" path="res://assets/sound_effects/sfx_ghost_enter.ogg" id="3_1rs3n"]
[ext_resource type="AudioStream" uid="uid://dgy08jltt2pqh" path="res://assets/sound_effects/sfx_ghost_exit.ogg" id="4_rfd7u"]
[ext_resource type="AudioStream" uid="uid://b1rqgybr4xsvc" path="res://assets/sound_effects/sfx_level_complete.ogg" id="5_pnd3r"]
[ext_resource type="AudioStream" uid="uid://dj44hvq4j0h3l" path="res://assets/sound_effects/sfx_pause_game.ogg" id="6_cbf4l"]
[ext_resource type="AudioStream" uid="uid://bukgj1c01j8iu" path="res://assets/sound_effects/sfx_resume_game.ogg" id="7_bgi7v"]
[ext_resource type="AudioStream" uid="uid://d2pqd3nywuarh" path="res://assets/sound_effects/sfx_scale_down.ogg" id="8_jwgio"]

[node name="SFXController" type="Node"]
script = ExtResource("1_tmdo1")

[node name="SFX_ClickButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_kfu8w")

[node name="SFX_GhostEnter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1rs3n")

[node name="SFX_GhostExit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rfd7u")

[node name="SFX_LevelComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pnd3r")

[node name="SFX_PauseGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cbf4l")

[node name="SFX_ResumeGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_bgi7v")

[node name="SFX_ScaleDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jwgio")

[node name="SFX_ScaleUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_n3rym")
